# rlvr

./: .gitignore  pyproject.toml
configs/: countdown_qwen3_0.6b.yaml  countdown_qwen3_1.7b.yaml
scripts/: download_model.py  preprocess_countdown.py  train.sh
src/rlvr/: main_grpo.py
src/rlvr/rewards/: countdown.py
